@@ -8,7 +8,6 @@ export(evalServer,
 	   parSocket,
        processSocket,
        sendSocketClients,
-	   sendSocketServer,
        closeSocketClients,
        startSocketServer,
        stopSocketServer)
